--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
-*{
-    font-size: 1rem;
-    line-height: 1.5rem;
-}
+
 header{
     background-color:  #1DA1F2;
-    border-radius: 1.5rem;
+    border-radius: 1rem;
     margin-left: 3rem;
     width: 55%;
     box-shadow: 2px 1px 3px 2px #000;
@@ -17,6 +14,7 @@ header{
     margin-top: 5rem;
     margin-left: 2rem;
     font-size: 1.5rem;
+    color: #fff;
 }
 .img img{
     
@@ -47,6 +45,51 @@ header{
     width: 60%;
     margin-right: 40rem;
     margin-left: 2rem;
-
-        
 }
+  
+.two{
+    border: 1px  solid rgba(128, 128, 128, 0.608);
+    width: 100%;
+    margin-right: 20rem;
+   
+}
+.note p{
+    margin-top: auto;
+    font-size: 1rem;
+    font-style: italic;
+
+}
+
+footer{
+    background-color: #1DA1F2;
+    color: #fff;
+    border-radius: 1rem;
+    box-shadow: 1px 1px 1px 1px #000;
+    width: 65%;
+    height: 15vh;
+    text-align: center;
+}
+p{
+    font-size: 1.3rem;
+}
+.footer {
+    padding: .1rem;
+    
+}
+.footer p{
+    line-height: 2px;
+    color: #fff;
+
+}
+ .footer  .p{
+    font-size: 1.3rem;
+    color: #FFDE00;
+    align-items: center;
+    top: 70%;
+
+}
+
+    
+        
+    
+    
